[tool.poetry]
name = "tdd-flask-docker"
version = "0.1.0"
description = ""
authors = ["k-rea <kitahara@k-rea.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "1.1.4"
flask-restx = "0.4.0"
Flask-SQLAlchemy = "2.5.1"
psycopg2-binary = "2.8.6"
pytest = "6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
